# adminlte-rust

./: Cargo.toml  README.md
src/: main.rs
src/models/: admin_dashboard.rs
src/routes/: mod.rs
templates/admin/: index.html
