[package]
name = "adminlte-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
tide = "0.16.0"
askama = { version = "0.10.5", features = ["with-tide"] }
askama_tide = "0.13.0"